syntax = "proto3";

package proto;

message PingRequest {
  uint64 time = 1;
  uint32 count = 2;
  bytes hostid = 3;
}

message PingReply {
  uint64 timeIn = 1;
  uint64 timeOut = 2;
  uint32 count = 3;
  int32 countMiss = 4;
  bytes hostid = 5;
}
